--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -2,116 +2,116 @@
 |----|----|----|----|----|----|----|
 |**chapter 3.1**|
 |accountant 会计|||||||
-|accuracy 准确|||||||
-|acid 酸|
-|adventure|
-|advertisement|
-|agriculture|
-|alley 小巷|
-|allowance|
-|amount|
-|analysis|
-|analyst|
-|ankle 脚踝|
-|Antarctica 南极洲|
-|ape 猿|
-|appearance|
-|architect|
-|architectures|
-|aristocrat 贵族|
-|article|
-|aspirin|
-|assignment|
-|atlas 地图集|
-|auditorium 礼堂|
+|accuracy 准确|accuracy||||||
+|acid 酸||
+|adventure||
+|advertisement||
+|agriculture||
+|alley 小巷||
+|allowance||
+|amount||
+|analysis||
+|analyst||
+|ankle 脚踝|alteration 改变|
+|Antarctica 南极洲|Antarctica|
+|ape 猿||
+|appearance||
+|architect||
+|architectures 建筑物|architectures|
+|aristocrat 贵族|aristocrat|
+|article||
+|aspirin|aspirin|
+|assignment||
+|atlas 地图集|atlas|
+|auditorium 礼堂|auditorium|
 |author|
 |authority|
 |award|
 |bachelor|
 |badge 奖章|
 |badminton|
-|baldness|
-|bands|
-|banquet 宴会|
-|bases|
-|beard 胡子|
-|beats|
-|beauty|
-|bibliography 参考目录|
-|bicycle|
+|baldness|bacteria 细菌|
+|bands|bandage 绷带|
+|banquet 宴会|bath|
+|bases|behaviors|
+|beard 胡子|bedsit|
+|beats|beats|
+|beauty|beverage 软饮料|
+|bibliography 参考目录|bibliography|
+|bicycle|bicycle|
 |board|
 |bone|
 |bowl|
 |bowling|
 |breakfast|
 |brick|
-|bridge|
-|brochures 宣传册|
-|bungalow 平房|
+|bridge|bridge|
+|brochures 宣传册|brochures|
+|bungalow 平房|bungalow|
 |burger|
-|burglar 窃贼|
+|burglar 窃贼|burglar|
 |bus|
 |**chapter 3.2**|
-|cabinet 柜子|
-|cafeteria 自助餐厅|
-|Cambridge|
-|canteen 食堂|
-|capsule 胶囊|
+|cabinet 柜子|cabinet|
+|cafeteria 自助餐厅|cafeteria|
+|Cambridge|Cambridge|
+|canteen 食堂|camel 骆驼|
+|capsule 胶囊|capsule|
 |carbon|
 |career|
-|carpet 地毯|
-|castle|
+|carpet 地毯|carpet|
+|castle|cashier 出纳员|
 |category|
-|cathedral 大教堂|
+|cathedral 大教堂|cathedral|
 |cause|
 |cents|
 |century|
 |chancellor 大学校长|
 |channel|
 |character|
-|chemist's|
-|chin|
-|circle|
-|cliffs|
-|cloth|
+|chemist's|chat|
+|chin|chin 下巴|
+|circle|clarity 清楚|
+|cliffs|cliffs|
+|cloth|clock|
 |clothing|
 |code|
-|cola|
+|cola|coke|
 |colleague|
 |comedy|
 |commuter 通勤者|
 |companion 伴侣|
 |conferences|
 |condifence|
-|congestion 拥堵|
-|conqueror|
+|congestion 拥堵|congestion|
+|conqueror|conqueror|
 |consultant 顾问|
 |consumption 消费|
-|contaminants 污染物|
+|contaminants 污染物|contaminants|
 |contamination|
 |continent 大陆，洲|
 |controversy 争议|
 |convenience|
 |corperation|
-|corpse 尸体|
-|correspondence 写信|
+|corpse 尸体|corpse|
+|correspondence 写信|correspondence|
 |costume 戏服|
 |cough|
 |council|
 |country|
 |course|
 |craft 手艺|
-|creek 小溪|
+|creek 小溪|creek|
 |crisis 危机|
 |crocodile 鳄鱼|
-|crop|
-|cutlery 餐刀|
+|crop|crop 庄稼|
+|cutlery 餐刀|cutlery|
 |cycle|
 |cycling|
 |**chapter 3.3**|
-|debt|
-|decision|
-|decorations|
+|debt|desert 沙漠|
+|decision|disaster 灾难片|
+|decorations|discipline 纪律|
 |delight 高兴|
 |depth|
 |description|
@@ -121,63 +121,63 @@
 |discos|
 |disease|
 |disposal 处置|
-|dispute 争议|
+|dispute 争议|dispute|
 |distance|
 |divorce|
 |drama|
 |draw|
 |drawer|
 |due|
-|duration 持续时间|
-|eagle|
-|elbow 肘|
-|emperor|
-|encyclopedia 百科全书|
-|engine|
-|epidemic 流行病|
-|ethic 伦理|
-|excitement|
-|excursion 游玩|
-|exercises|
-|exhibition|
-|expansion 扩充|
-|explanation|
+|duration 持续时间|dust 灰尘|
+|eagle|evidence 证据|
+|elbow 肘|elbow|
+|emperor|emperor 皇帝|
+|encyclopedia 百科全书|encyclopedia|
+|engine|engine 发动机|
+|epidemic 流行病|epidemic|
+|ethic 伦理|ethic|
+|excitement|excitement 兴奋|
+|excursion 游玩|excursion|
+|exercises|excuse 借口|
+|exhibition|existence 存在|
+|expansion 扩充|expansion|
+|explanation|explanation 解释|
 |explosion|
-|exposition 博览会|
-|exposure 曝光|
+|exposition 博览会|extension 分机，延期|
+|exposure 曝光|exposure|
 |**chapter 3.4**|
 |failure|
 |fashion|
-|feast 宴会|
-|feather|
+|feast 宴会|feast|
+|feather|ferries 摆渡；渡轮|
 |feature|
 |festival|
-|field|
+|field|field 领域|
 |finger|
-|flour|
-|flourish 炫耀|
-|flu|
+|flour|flour 面粉|
+|flourish 炫耀|flourish|
+|flu|flu 流感|
 |forest|
 |forestry|
 |formula|
 |foyer 门厅|
-|fruit|
+|fruit|fruit 水果|
 |fur|
 |furniture|
 |gallery|
 |garage|
-|gasoline|
-|grain|
+|gasoline|gasoline 石油|
+|grain|goal 目标|
 |grass|
-|growth|
-|habit|
-|handling|
+|growth|growth 成长|
+|habit|gulf 海湾|
+|handling|guy 家伙|
 |handout 讲义|
-|hat|
+|hat|hat 帽子|
 |headache|
 |herb 草药|
 |heroes|
-|heroine 女英雄|
+|heroine 女英雄|heroine|
 |historian|
 |housework|
 |housing|
@@ -185,69 +185,69 @@
 |inability 无力|
 |injury|
 |insect|
-|insomnia 失眠|
+|insomnia 失眠|insomnia|
 |investigator 调查人|
 |isolation 隔离|
 |jaw 下颚|
 |jeans|
 |journal 学术期刊|
-|junction|
+|junction|junction 交叉路口|
 |junior|
 |keeper|
-|kelp 海藻|
-|kiosk 小卖部|
-|knowledge|
-|koala 考拉|
-|laser|
-|lava 火山岩|
-|lecturer 授课教师|
-|lengh|
-|lesson|
-|lift|
-|lion|
+|kelp 海藻|kit 工具箱|
+|kiosk 小卖部|kiosk|
+|knowledge|knowkedge 知识|
+|koala 考拉|koala|
+|laser|lawyer 律师
+|lava 火山岩|lava|
+|lecturer 授课教师|lecturer|
+|lengh|length 长度|
+|lesson|lesson 课程|
+|lift|lift 电梯|
+|lion|light 灯|
 |loss|
-|lounge 休息大厅|
+|lounge 休息大厅|lounge|
 |loyalty|
-|mane 鬃毛|
-|mat|
+|mane 鬃毛|mane|
+|mat|marsh 沼泽|
 |material|
 |maturity|
 |medium|
 |migration|
 |mileage 里程表|
 |mineral 矿物|
-|monopoly 垄断|
+|monopoly 垄断|model 模型|
 |morality 道德|
-|mosquito|
+|mosquito|mosquito 蚊子|
 |**chapter 3.6**|
-|moustache 胡子|
+|moustache 胡子|moustache|
 |mouth|
 |muscle|
 |museum|
-|naught 零|
+|naught 零|naught|
 |nursery 幼儿园|
 |nut|
 |nutrition|
 |occasion 场合|
 |occupant 占有者|
 |oculist 眼科医生|
-|ointment 药膏|
-|option|
-|ordinary|
+|ointment 药膏|ointment|
+|option|original 最初的|
+|ordinary|ordinary 普通的|
 |Oxford|
 |paint|
 |painting|
 |pair|
 |pal 伙伴|
-|parcel|
+|parcel|parcel 包裹|
 |pastime 娱乐活动|
-|pedestrian 行人|
-|pension 养老金|
-|pensioners|
+|pedestrian 行人|pedestrian|
+|pension 养老金|pension|
+|pensioners|pensioners 领退休金的人|
 |perfume 香水|
 |permit|
-|petroleum 石油|
-|philosopher 哲学家|
+|petroleum 石油|petroleum|
+|philosopher 哲学家|pyilosopher|
 |physician 内科医生|
 |physics|
 |pianist 钢琴家|
@@ -258,59 +258,59 @@
 |port|
 |particulars 细节|
 |**chapter 3.7**|
-|pottery 陶器|
-|precaution 预防|
-|precision 精确|
-|preposition 介词|
-|prescription 药方|
+|pottery 陶器|porrtry|
+|precaution 预防|precaution|
+|precision 精确|precision|
+|preposition 介词|prepositon|
+|prescription 药方|prescription|
 |presentation 介绍|
 |preservation 保存|
 |privacy|
 |professor|
 |prone 倾向于|
 |property|
-|prospectus 招生简章|
-|protein 蛋白质|
-|psychiatrist 心理医生|
-|psychologist|
-|psychotherapy 心理疗法|
+|prospectus 招生简章|prospectus|
+|protein 蛋白质|protein|
+|psychiatrist 心理医生|psychiatrist|
+|psychologist 心理学家|psychologist|
+|psychotherapy 心理疗法|psychotherapy|
 |publication|
 |purpose|
 |quantity|
 |quarter|
 |radar 雷达|
 |rainfall|
-|recipe 处方|
+|recipe 处方|recipe|
 |recruit 招募|
 |recycling|
 |referee 裁判员|
-|reference 参考书|
-|reflectance 反射率|
-|relaxation|
-|relief 缓解|
-|religion|
+|reference 参考书|removal 去掉|
+|reflectance 反射率|reflectance|
+|relaxation 放松|relaxation|
+|relief 缓解|relief|
+|religion 宗教|religion|
 |repetition|
 |restaurant|
-|role|
+|role 角色|role|
 |**chapter 3.8**|
 |route|
 |safari 游猎|
 |sale|
 |salt|
 |sample|
-|sandal 凉鞋|
+|sandal 凉鞋|sandal|
 |satellite|
-|sauce|
-|scandal 丑闻|
-|scandals|
+|sauce 酱汁|sauce|
+|scandal 丑闻|scandal|
+|scandals|scandals|
 |scar|
 |scent|
-|schedule|
-|scheme 方案|
-|scholar 学者|
-|scholarship 奖学金|
+|schedule 时间表|schedule|
+|scheme 方案|scheme|
+|scholar 学者|scholar|
+|scholarship 奖学金|scholarship|
 |sculpture 雕塑|
-|secretary|
+|secretary 秘书|secretary|
 |sense 感觉|
 |servant|
 |sewage|
@@ -319,73 +319,73 @@
 |sheet|
 |shelter|
 |shoplifters|
-|side|
+|side|sight 视界|
 |simulation 模拟|
 |sketelon 骨架|
 |snack|
 |sponsor 发起人|
 |spot|
-|steak|
-|sting 刺|
+|steak 牛排|steak|
+|sting 刺|sting|
 |stomach|
 |stomachache|
 |store|
 |srtategy|
 |strength|
-|subsidy 津贴|
+|subsidy 津贴|subsidy|
 |suburb 郊区|
 |sugar|
-|suit|
-|sunshield|
+|suit 西装|suit|
+|sunshield 遮阳板|sunshield|
 |supervisor 导师|
 |surgeon 外科医生|
 |surname|
 |survival|
-|symptom 症状|
-|syndicate 财团|
-|syrup 糖浆|
-|tax|
+|symptom 症状|symptom|
+|syndicate 财团|syndicate|
+|syrup 糖浆|syrup|
+|tax 税收|tax|
 |**chapter 3.9**|
 |jargon 黑话|
-|teeth|
+|teeth 牙齿|teeth|
 |texture 质地|
 |galaxy 星系|
-|theft 偷窃|
+|theft 偷窃|theft|
 |theory|
 |therapist 治疗专家|
 |therapy 疗法|
 |thesis 毕业论文|
-|thieves|
-|thriller 恐怖小说|
+|thieves 小偷|thief thieves|
+|thriller 恐怖小说|thriller|
 |tides 潮汐|
 |tile 瓦片|
-|timber 木材|
-|touching|
-|trend|
+|timber 木材|trailer 预告片|
+|touching|tower 塔|
+|trend 趋势|trend|
 |tribe 部落|
-|trolley 手推车，有轨电车|
-|tube|
+|trolley 手推车，有轨电车|trolley|
+|tube 管子|tube|
 |tunnels|
 |tuition|
 |tunes 曲子|
-|umpire 裁判|
+|umpire 裁判|umpier|
 |utensil 厨房器具|
-|vacancy 空缺|
-|particular|
+|vacancy 空缺|vacancy|
+|particular|variety 种类|
 |vegetable|
-|velvet 天鹅绒|
-|visa|
-|vitamin|
+|velvet 天鹅绒|velvet|
+|visa|vineger 醋|
+|vitamin 维他命|vitamin|
 |waist|
-|wasp 黄蜂|
+|wasp 黄蜂|wasp|
 |wasteland|
-|wax 蜡|
+|wax 蜡|wax|
 |wealth|
-|weeds 杂草|
-|wetland 湿地|
-|whale 鲸鱼|
-|wheel|
-|width|
+|weeds 杂草|weeds|
+|wetland 湿地|weight 重量|
+|whale 鲸鱼|whale|
+|wheel 车轮|wheel|
+|width 宽度|width|
 |yoga|
 |**chapter 4.1**|
 |academic|
@@ -394,121 +394,121 @@
 |additional|
 |adequate 足够的|
 |advisable 明智的|
-|alternative 替代的|
+|alternative 替代的|allergic 过敏的|
 |ambiguous 模糊的|
-|analytical|
-|applied|
-|archaeological 考古学的|
+|analytical 分析的|analytical|
+|applied|artificial 人工的|
+|archaeological 考古学的|archaeological|
 |ascending 上升的|
 |atmospheric|
 |attentive 周到的|
 |audio|
 |available|
-|auto|
+|auto 自动的|auto|
 |bald 秃头的|
-|barren 贫瘠的|
-|buried 埋藏的|
+|barren 贫瘠的|blond 金发的|
+|buried 埋藏的|buried|
 |casual 偶然的，休闲的|
 |central|
 |cheerful|
 |coastal 临海的|
 |commonsense 常识的|
 |conservative 保守的|
-|convenient|
+|convenient|cooperative 合作的|
 |corrupt 腐败的|
 |crucial 关键的|
-|curly 卷发的|
+|curly 卷发的|cruly|
 |daily|
-|dairy 牛奶的|
+|dairy 牛奶的|dairy diary|
 |dangerous|
 |distinct|
 |domestic 家庭的|
 |dominant 优势的|
 |eastern|
 |enormous 巨大的|
-|enthusiastic 热情的|
-|essential 基本的|
+|enthusiastic 热情的|enthusiastic|
+|essential 基本的|essential|
 |existent 现存的|
 |**chapter 4.2**|
 |familiar|
 |fashionable|
 |favourite|
 |general|
-|genetic 基因的|
-|hazardous 冒险的|
-|herbivorous 食草的|
-|highly-trained|
+|genetic 基因的|geographical 地理学的|
+|hazardous 冒险的|hazardous|
+|herbivorous 食草的|herbivorous|
+|highly-trained|inaccurate 不准确的|
 |illegal|
-|inadequate|
+|inadequate 不足的|inadequate|
 |informative|
 |inspiring|
-|intelligent|
-|irregular|
+|intelligent 智力的|intelligent
+|irregular|intermidiate 中级的|
 |irritable 易怒的|
 |isolated 隔离的|
 |little-known|
 |loyal|
-|magnificent 华丽的|
+|magnificent 华丽的|magnificent|
 |martial 武术的|
 |mature|
 |migratory 迁移的|
 |military 军事的|
-|miserable 悲伤痛苦的|
+|miserable 悲伤痛苦的|miserable|
 |modern|
 |neighbouring|
-|nervous|
+|nervous 紧张的|nervous|
 |northern|
 |occupational 职业的|
 |oral|
 |parental|
-|payable|
-|political|
-|pop|
+|payable|pleasant 愉快的|
+|political 政治的|political|
+|pop 流行的|pop|
 |**chapter 4.3**|
-|printed|
-|psychiatric 精神病的|
+|printed|protential 潜在的|
+|psychiatric 精神病的|psychiatric|
 |psychological 心理学的|
-|Queen's|
-|raw 生的|
-|recycled|
-|redundant 多余的|
+|Queen's|precious 珍贵的|
+|raw 生的|predictable 可预言的|
+|recycled|previous 以前的|
+|redundant 多余的|redundant|
 |regional 地区的|
 |reinforced 加强的|
-|relevant 有关的|
+|relevant 有关的|relevant|
 |resistant 顽固的|
 |reverse 相反的|
 |royal 王室的|
 |rural 乡下的|
-|sacked 解雇的|
-|safe|
-|satisfactory 令人满意的|
+|sacked 解雇的|sacked|
+|safe|safe 安全的|
+|satisfactory 令人满意的|satisfactory|
 |scarce 罕见的|
 |self-funded 自费的|
 |self-sufficient 自给自足的|
 |sensible 明智的|
-|serial 连续的|
-|southern|
-|spiral 螺旋形的|
+|serial 连续的|serial|
+|southern 南方的|southern|
+|spiral 螺旋形的|spacious 宽敞的|
 |stout 强壮的|
-|strained 因紧张而不自然的|
-|sufficient|
+|strained 因紧张而不自然的|strained|
+|sufficient|technical|
 |surprised|
 |systematic|
 |theoretical 理论的|
-|traditional|
-|typical|
+|traditional|traditional|
+|typical|typical典型的|
 |unanimous 一致通过的|
-|unconvincing 不可信的|
-|unusual|
-|violent|
-|virtual 虚拟的|
-|visual|
-|western|
+|unconvincing 不可信的|unconvincing|
+|unusual|wealthy 有钱的|
+|violent|whole 整个的|
+|virtual 虚拟的|wide 广泛的|
+|visual|worthwile 值得的|
+|western|worthy 值得|
 |**chapter 4.4**|
 |effectively 有效地|
 |efficiently 高效地|
-|originally 原来地|
-|physically 身体地|
+|originally 原来地|originally|
+|physically 身体地|professionally 专业地|
 |scarcely 不足地|
 |virtually 几乎|
 |**chapter 5.1**|
