--- a/IELTS/语料库听写/听写记录2.md
+++ b/IELTS/语料库听写/听写记录2.md
@@ -38,3 +38,13 @@ popular positive possible protencial practical presious predictible present prev
 
 #### test paper 4
 almost currently directly effectively efficiently originally psysically professionally rapidly regularly scarcely virtually
+
+
+## chapter 5
+#### test paper 1
+a great variety of,  a balanced diet, a couple of, a pair of glasses, a period of time, a class, a series results, a serious person, a sharp turn, abilities, academic english, problem, system, teaching staff, accomomdation fare, fee, form, accountants, action plan, added panic, admission card, office, adult students, advanced course, degree, english study, a g- reform, ahead of time, aim of lecture, aims, air pollution, pump, shuttle bus, conditioner, alarm system, alternative energy, ATM, amusement park, an educational film, analys data, acient temple, anual membership fee, answer the question, ant intelligence, - and acid, appearences, apple juice, application form, applied mathematic, science, architecture style, arctic ocean, atlantic ocean, avoid touching rocks, arm badge, arrive at one's destination, art gallery, mesuem, artical from journal, artistic approach, asian study, assessment methods, assessment of patient, assistant professor, associate with, assume the responsibility, at least, area for improvement, awards, atmospheric pollution, warming, Australian Dollars, -, bricks, bowls, Bachelor's Degree, bad eyesight, bad management, baked earth, bank statement, bank transfer, banking center, bar chart, bar code, barbeque set, barren land, mine, basic course, rule, be allergic to sth, be out of temper, bed sheet, bet linen, be prone to, beginning course, belts, biological clock, black raincoat, skirt, tea, trousers, velvet, blocks, blood flow, sample, bloom of flowers, blue sweater, boarding school, boat trip, book in advance, book reservation, bone, bowling alley, - garden.  
+
+#### test paper 2
+b- , breathtaking , breed fish, British Council, library, museum, broaden one's horizen, view, brother in low, buses, bus pass, bus route, business card, class, culture, ethic, faculty, study, trip, cages, cabin keys, cable car, curculation desk, call slip, campus crime, candles, cannot miss the deadline, car model, car rental, tyers, index, card catelog, common card, carben dioxide, carve, carving wood, case study, case studies, choices for facilities, cassette recorder, CD player, CD-ROM, casual clothes, ware, charges, ca-, catering facilities, staff, center hall, manager, seating, avanue, park, fishing, certificate of childcare, - orgnization, charity hospital, check in, check out, checklist, chest infection, chemistry lab, church road, checkbook, check card, consentrate on, circus performance, Children's Day, cheese production, city's expansion, city council, city overhead view, commuters, class representative, conqueror, cleaning equipment, materials, clear argument, classmate, couse texture, comfortable clothes, colleagues, clock watch, closed shelves, closed-book exam, closed reserve, closed-circus TV, coffee shop, break, machine, collection tank, collections, college close up, common resident, common room, sense, communication skills, strategy, technology, con-report, contact list, company action, compulsory course, computer model, programmer, sound card, system, connecting flight, concert hall, room, plasical music.
+
+
