--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -514,24 +514,24 @@
 |**chapter 5.1**|
 |a balanced diet|
 |a couple of|
-|A plus|
-|a series of|
-|a sharp turn|
-|accommodation expense|
-|accommodation fee 住宿费|
-|accommodation form|
+|A plus|A plus|
+|a series of|a series of|
+|a sharp turn|academic teaching staff|
+|accommodation expense|accommodation expences|
+|accommodation fee 住宿费|accommodation fee|
+|accommodation form|accommodation form|
 |accountants|
 |added panic|
-|agrarian reform 土地改革|
-|aim of lecture|
-|aims|
+|agrarian reform 土地改革|agrarian reform|
+|aim of lecture|analyse data|
+|aims|ancient temple|
 |air shuttle bus 机场大巴|
 |alternative energies 替代能源|
-|annual membership fee|
+|annual membership fee|annual membership fee|
 |ant intelligence 蚂蚁智慧|
-|antibiotics and acid 抗生素|
-|appearances 外观|
-|architecture style 建筑风格|
+|antibiotics and acid 抗生素|antibiotics and acid|
+|appearances 外观|appearance|
+|architecture style 建筑风格|avoid touching rocks|
 |Arctic Ocean 北冰洋|
 |Atlantic Ocean 大西洋|
 |Pacific Ocean 太平洋|
@@ -540,18 +540,18 @@
 |art gallery|
 |articles from journal 期刊文章|
 |artistic approach 艺术的方法|
-|associate with 交往|
+|associate with 交往|associate with|
 |assume the responsibilitiy 假设责任|
 |area of improvement|
 |awards|
 |atmospheric pollution|
-|average ability|
+|average ability|average ability|
 |bricks|
 |bowls|
 |Bachelor's degree|
 |bad eyesight|
-|Baked Earth|
-|barbecue set|
+|Baked Earth|bank transfer|
+|barbecue set|barbecue set|
 |barren land|
 |barren mine|
 |bed linen 床上用品|
@@ -563,9 +563,9 @@
 |book reservation|
 |bones|
 |bowling alley|
-|botanical garden 植物园|
+|botanical garden 植物园|botanical garden|
 |**chapter 5.2**|
-|bulletin board 公告板|
+|bulletin board 公告板|bulletin board|
 |breathtaking 惊险的|
 |breed fish 养殖鱼|
 |broaden one's horizon 开拓眼界|
@@ -574,41 +574,41 @@
 |business faculty 商学院|
 |cages|
 |cabin keys|
-|circulation desk 还书处|
+|circulation desk 还书处|circulation desk|
 |call slip 借书证|
 |campus crime|
-|car tyres|
-|comment card|
-|carbon dioxide 二氧化碳|
+|car tyres|card catalog|
+|comment card|comment card|
+|carbon dioxide 二氧化碳|carbon dioxide|
 |carve 雕刻|
 |carving wood|
 |cassette recorders 录音机|
 |casual clothes 休闲装|
 |casual wear|
-|cater to 迎合|
+|cater to 迎合|cater to|
 |catering facilities 餐饮设施|
 |catering staff|
-|center heating|
-|Center Avenue|
-|certificate of childcare|
-|charitable organization|
-|charity hospital|
-|concentrate on|
-|circus performance 马戏团表演|
-|commuters|
+|central heating|central heating|
+|Central Avenue|Central Avenue|
+|certificate of childcare|Central Station|
+|charitable organization|charitable organization|
+|charity hospital|chequebook|
+|concentrate on|cheque card|
+|circus performance 马戏团表演|concertrate on|
+|commuters|city's expansion|
 |class representative|
 |conquerors|
 |cleaning equipment|
-|coarse texture 质地粗糙|
+|coarse texture 质地粗糙|coarse texture|
 |colleagues|
 |closed shelves|
 |closed reserve|
-|closed-circuit TV|
+|closed-circuit TV|closed-circuit TV|
 |college close-up|
-|conference reports|
+|conference reports|conference reports|
 |contact list|
 |compulsory course 必修课程|
-|connecting flight|
+|connecting flight|classical music|
 |**chapter 5.3**|
 |contact lenses|
 |cooperating research elements|
