--- a/IELTS/语料库听写/听写记录2.md
+++ b/IELTS/语料库听写/听写记录2.md
@@ -47,4 +47,18 @@ a great variety of,  a balanced diet, a couple of, a pair of glasses, a period o
 #### test paper 2
 b- , breathtaking , breed fish, British Council, library, museum, broaden one's horizen, view, brother in low, buses, bus pass, bus route, business card, class, culture, ethic, faculty, study, trip, cages, cabin keys, cable car, curculation desk, call slip, campus crime, candles, cannot miss the deadline, car model, car rental, tyers, index, card catelog, common card, carben dioxide, carve, carving wood, case study, case studies, choices for facilities, cassette recorder, CD player, CD-ROM, casual clothes, ware, charges, ca-, catering facilities, staff, center hall, manager, seating, avanue, park, fishing, certificate of childcare, - orgnization, charity hospital, check in, check out, checklist, chest infection, chemistry lab, church road, checkbook, check card, consentrate on, circus performance, Children's Day, cheese production, city's expansion, city council, city overhead view, commuters, class representative, conqueror, cleaning equipment, materials, clear argument, classmate, couse texture, comfortable clothes, colleagues, clock watch, closed shelves, closed-book exam, closed reserve, closed-circus TV, coffee shop, break, machine, collection tank, collections, college close up, common resident, common room, sense, communication skills, strategy, technology, con-report, contact list, company action, compulsory course, computer model, programmer, sound card, system, connecting flight, concert hall, room, plasical music.
 
+#### test paper 3
+contact- , cooperating research elements, curting with stress, cop - , cost effective, cost of living, costume party, ca- , country music, course fee, course and materials, course director, cover the cost, cross the roads, credit card, creeks, crime awareness, crime rate, -, cultrual diffenences, culture shock, -, currency form ,current account, cycling route, customer service, cut and polished, damages, dark clothes, dark trousers, date line, data analysis, data assessment, date of birth, date of expiry, -, day pupil, day school, day shift, debts, decades, decayed teeth, decoration balloom, deliver a speach, delivery desk, department building, store, departmental address, desire to learn, desk lamp, details, detective film, degital camera, system, different levels, dining hall, room, diseases, distant deadline, learning, divorce rate, distinguishing feature, distribution of population, download trend, do training course, Doctor's degree, domestic factors, domestic student, domestic violence, door key , door-to-door service, drugs, double look, double room, double grill, drama theatre, festival, teacher, draw a conclusion, disabled access, drop out rate, dress code, dress rehersal, disbutes, drinking machine, drinks and snacks, drink less coffee, driver's licence, driving liences, directors, drop off side, drop off, EL Nino, eagle road, eastern beach, eat harmful insects, economic growth, economic history, economy class, education exhibition, education officer, standard, system, electronic director, electric fan, electricity bill, fee, electronic dictionary, email atachment, account, address, emergency contact person, emergency telephone number, dial
+
+#### test paper 4
+emotion and mood, end of term, endangered fishes, energy industory, engineers, engineering room, engrave, enrollment fee, entrance fee, environment agency, environmental damage, issues, science, studies, environmentally friendly, evening news, appointment, exercise one's muscles, exhibition of instruments, experimental for constructions, facilities, expected duration, express train, way, extension number, extensive writing, exchange draft, extra charge, workload, ethical film, eye doctor, eye contacts, essay plan, - species, face to face interview, failure rate, family medical history, familure with, family abuse, ticket, name, relationship, fancy dress, ball, dress party, falcons, farewell party, farming products, fear of unemployment, feel one's pulse, female corpse study, field method, system, trip, work, film festival, studio, financial advise, financial a-, budget, department, e-, goal, market, organization, policy, problems, shortage, source, fine arts, fine texture, fire alarm, blanket, d-, management, first floor, name, aid kit, year student, fish cakes, fish tank, fishing boat, industory, fitness center, club, level, training, fixed expenses, flexible working time, flight number, flowers taste, - craft, speed, food processing, food and oil, food chin, focus on, football club, match, for sale, forestry industory, formal clothes, fortnight, four nights, fours year's student
+
+#### test paper 5
+ free for heating , free of charge, free transportation , fruit juice, fruit trees, functions and places, full time, full name, fur trade, further education, garden hall, garden tool, generation of electricity, gas station, general election, general english, practise, health, ideas, method, science, geography trip, geographic location, geographical value, give sth a sack, given name, give a prescription, give up, give a speech, give confirmation, get feetbacks, guide book, guided tour, go to hospital, global listenling, warming, gold medal, street, golf club, good eyesight, good shoes, good stearing, goodbye party, government policy, government funded, grasp key words, graduate school, graduation announcement, grain pattern of -, grain pattern, great favourite, ground floor, green waste, greyhound bus, group discussion, gym membership, hens, high wind, half human, half term, hard-hoofed animal, hall of the residence, hand pump, hand broken, have access to, harmful insects, to human, have strong heart and lung, have an operation, have high rank in geography, have strong financial muscles, help desk, head master, head office, health care, health check, club, heart attack , heart beats, heart disease, - indicator, horse hair, horse riding, herb tea, herd of cattles, host family, high rank, highly trained staff, high education, high- building, high quality camera, honey moon suite, historical museum, history of school, historical map, horror film, hot-dog, hot meal, hot house effect
+
+#### test paper 6
+hotel crime, hunt for, house insurence, house key, housing agency, human being, human consumption, human race, human resource, ice cirling, ice pack, ice skating, identities, identity card, illegal profit, invisible view, immune system, in advance, in chemistry lab, in circles, in circulation , Indian Ocean, incoming -, independence day, industrial material, information board, information video, information desk, information page, information sector, inland region, initial migration, injection of vaccine, institude, institution, in-, instructors, instruction of handbook, instance coffee, inter personal , ensurance company, -, intensive course, intensive study, interlibrary service, intermediate course, internal clock, international club, international evening, international student card, international student, internet access, internet cafe, internet system, investigators, irrigable lands, isolated spots, job interviews, jaw, joint membership, keepers, jump the queue, jump the line, -, -, kelp forest, key approach, k-, keywords, kick sb out of work, King's sized bed, king suite, knife, kitchen table, utensil, lamp, listening tape-, lab equipment, lack confidence, lack of confidence, landmark, large slide, large scale housing, lecture hall, laser printing, last but not least, last name, lawyers, layout of resume, learning strategy, learning style, leisure wear, leisure activity, level of moturity, lemon tree, letter of reccommodation, library card, library resources, life science, life cycle, life expectancy, life ensurance, live, link to, literary film, list of headings, list of objectives
+
+#### test paper 7
+living cost, living expenses, loan, local walking club, local history, local industry, local pet shop, local product, local resident, local school, local shop, local student, local tribe, lookout point, lock all windows, long term learn, lost of soil, lose temper, loud speaker, love story, low nutrition, low frequency noise, low income, magazines and journals, magical animals, machine and robot, martial arts, maid servant, mails, mailing list, major in nursing, main course, main entrance, main hall, main kitchen, main library, make an oppiontment, make plan , map of cave, manage time, man make dam, manual facility, market research, cycle, economy, marketing management, research, techniques, simenar, strategy, math media, mind map, master's degree, master card, meat and cheese, mathematic fomular, mature student, media study, media center, media room, medical science, medical center, medical history, book list, membership consultant, membership of club, mental ability, mental education, microwave oven, mid autumn festival, midmornning snack, mid range, mid semester, migration pattern, -, miles, military museum, mill thr grain on the ground, millons of, mountain, miniral water, minimum qualification, mining industry, mobile phone, modern languages, modern managed hotel, modern sport facilities, money diary, money lender, money management, money order, m of education , mosquito net, mother in law, movie poster, movement of muscle, music equipment, music instrument, notice board, name badge, native animal, negative effect, natural medicine, museum, fiber, new techonology, night, night shift, no allergy, no charge, no nut, non medicine item, non stop flight, not checked idenditity, not for circulation, number of exposure, number of occupant, nursing care, nursing deploma, occupational factors, nursery, nursery school, obligatery course, self-sufficient, off campus, office assistant, over fill, -, olive oil, -
 
