--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -610,38 +610,38 @@
 |compulsory course 必修课程|
 |connecting flight|classical music|
 |**chapter 5.3**|
-|contact lenses|
+|contact lenses|contact lenses 隐形眼镜|
 |cooperating research elements|
-|coping with stress 缓解压力|
-|corporate loan 企业贷款|
+|coping with stress 缓解压力|coping with stress|
+|corporate loan 企业贷款|corperation loan|
 |cost effective 性价比高|
 |costume party 化妆舞会|
-|cough mixture 止咳药水|
+|cough mixture 止咳药水|cough mixture|
 |course fee|
 |course and materials|
 |course director|
-|craft goods|
+|craft goods|craft goods 手工艺制品|
 |creeks|
 |crime awareness|
-|crime rate|
-|curve chart 曲线图|
+|crime rate|cross passage 通道|
+|curve chart 曲线图|curve chart|
 |cycling route 骑行路线|
 |customs service 海关服务|
 |cut and polished 切割和抛光|
 |dark clothes|
 |dateline|
-|date slip 日期单|
+|date slip 日期单|date slip|
 |debts|
 |decayed teeth 蛀牙|
-|decoration balloons 装饰气球|
-|distinguishing feature 特色|
-|domestic factors|
+|decoration balloons 装饰气球|decoration balloons|
+|distinguishing feature 特色|digital camera|
+|domestic factors|do training courses|
 |domestic violence|
 |double grill 双烤架|
 |Drama Festival|
-|dress rehearsal 彩排|
-|disputes 争议|
-|EL Nino 厄尔尼诺现象|
+|dress rehearsal 彩排|dress rehearsayl|
+|disputes 争议|disputes|
+|EL Nino 厄尔尼诺现象|driver's license|
 |economic growth|
 |economic class|
 |education exhibition|
@@ -649,7 +649,7 @@
 |electric fan|
 |dial|
 |**chapter 5.4**|
-|endangered species|
+|endangered species|endangered species|
 |energy industry|
 |engrave 刻|
 |exercise one's muscles|
@@ -657,22 +657,22 @@
 |experimental for construction|
 |expected duration|
 |ethical film|
-|extinct species 灭绝的物种|
-|fancy dress 化妆舞会的服装|
+|extinct species 灭绝的物种|extinct species|
+|fancy dress 化妆舞会的服装|familiar with|
 |falcons 猎鹰|
 |fear of unemployment|
 |feel one's pulse|
 |female corpse study|
 |field method|
 |field system|
-|field trip|
-|financial executive 财务主管|
-|financial organization|
-|fire drill 消防演习|
-|fish tank|
-|fixed expenses|
-|food chain|
-|forestry industry|
+|field trip|financial affairs|
+|financial executive 财务主管|financial executive|
+|financial organization|focus on|
+|fire drill 消防演习|fire drill|
+|fish tank|fishing industry|
+|fixed expenses|flying craft|
+|food chain|food chain 食物链|
+|forestry industry|fourth-year student|
 |**chapter 5.5**|
 |free for heating|
 |fruit juice|
@@ -680,7 +680,7 @@
 |fur trade|
 |Garden Hall|
 |garden tools|
-|general election 全民选举|
+|general election 全民选举|general election|
 |geography trip|
 |geographic location|
 |geographical value|
@@ -689,10 +689,10 @@
 |guided tour|
 |go to hospital|
 |gold medal|
-|good steering 方便操纵|
+|good steering 方便操纵|good steering|
 |grasp keywords 抓住关键字|
 |graduation announcements 毕业典礼请柬|
-|grain pattern of timber 木材纹理|
+|grain pattern of timber 木材纹理|grain pattern of timber|
 |grain pattern 纹理图案|
 |greyhound bus 灰狗巴士|
 |hens 母鸡|
@@ -704,45 +704,45 @@
 |have strong hearts and lungs|
 |have high rank in geography|
 |have strong financial muscles|
-|heat indicator 热指示器|
+|heat indicator 热指示器|heat indicator|
 |horse hair|
 |herb tea|
 |herd of cattle 一群牛|
 |host family|
 |high rank|
-|high-rise buildings|
+|high-rise buildings|high-rise buildings|
 |honeymoon suite|
 |horror film|
 |**chapter 5.6**|
-|hunt for|
+|hunt for|house insurance|
 |human consumption|
-|ice curling 冰壶运动|
+|ice curling 冰壶运动|ice curling|
 |illegal profits|
-|incoming call|
+|incoming call|incoming call|
 |Independence Day|
 |industrial material|
-|injection of vaccine 注射疫苗|
-|insects haunting 虫灾|
-|intensive course 强化课程|
+|injection of vaccine 注射疫苗|institutes|
+|insects haunting 虫灾|insects haunting|
+|intensive course 强化课程|intersive course|
 |interlibrary service 图书馆际服务|
 |investigators 调查者|
 |irrigable land 可灌溉土地|
 |isolated spot|
 |jump the queue|
-|killer whales 虎鲸|
-|Kungfu film|
+|killer whales 虎鲸|killer whale|
+|Kungfu film|Kungfu film|
 |kelp forest 海藻森林|
-|key to reception 接待处钥匙|
+|key to reception 接待处钥匙|key to reception|
 |King's suite|
 |knives/knife|
-|kitchen utensils 厨具|
+|kitchen utensils 厨具|listening tapescript|
 |large-scale housing 大型住房|
-|laser printing|
+|laser printing|laser printing|
 |lawyers|
 |learning strategies|
-|leisure wear|
-|level of maturity|
-|letter of recommendation|
+|leisure wear|leisure wear|
+|level of maturity|level of maturity|
+|letter of recommendation|letter of recommendation|
 |life cycle|
 |life expectancy 预期寿命|
 |**chapter 5.7**|
@@ -755,32 +755,32 @@
 |martial arts 武术|
 |manmade dam 人造大坝|
 |manual facilities|
-|market cycle|
-|marketing techniques|
-|mass media 大众媒体|
-|meat and cheese|
+|market cycle|seminar|
+|marketing techniques|techniques|
+|mass media 大众媒体|mass media|
+|meat and cheese|mathematic formula|
 |mathematic formula|
 |mature students|
 |microwave oven 微波炉|
 |mid-autumn festival|
 |mid-semester|
 |migration patterns 迁徙路线|
-|mileage ticket|
-|mill the grain on the ground 磨|
-|mineral water 矿泉水|
+|mileage ticket|mileage ticket|
+|mill the grain on the ground 磨|millions of|
+|mineral water 矿泉水|mineral water|
 |mining industry|
-|monopoly of education|
+|monopoly of education|monopoly of education|
 |name badge|
 |natural fiber|
 |no allergy|
 |non-medicine item|
 |not for circulation 不外借|
 |number of occupants 占用人数|
-|Nursing Deploma|
+|Nursing Deploma|Nursing Diploma|
 |occupational factors 职业因素|
-|obligatory course|
+|obligatory course|obligatory course|
 |office assistant|
-|overfill|
+|overfill|oil explosion|
 |olive oil 橄榄油|
 |OHPEN|
 |**chapter 5.8**|
